# vaelkor-rs

./: .gitignore  Cargo.toml  bootstrap.sh  index.html  launch.sh  package-lock.json  package.json  vite.config.js
.claude/: settings.json
cli/: Cargo.toml
cli/src/: main.rs
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/daemon/: config.rs  mod.rs  project.rs  session.rs  state.rs
src-tauri/src/terminal/: bridge.rs  mod.rs  pane_manager.rs
src-tauri/src/wrapper/: manager.rs  mod.rs  protocol.rs  server.rs
src/components/: AgentPanel.js  TaskList.js  Terminal.js
wrapper/: Cargo.toml
wrapper/src/: client.rs  detector.rs  main.rs  protocol.rs  tmux.rs
