[package]
name = "vaelkor"
version = "0.1.0"
description = "Vaelkor — multi-agent orchestrator backend"
authors = ["Fett"]
edition = "2021"

[lib]
name = "vaelkor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vaelkor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
